tests/type/bad/bad-field01.py
class Test:
    def method(self):
        self.test = self.other
